--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,13 @@
     tools:context=".MainActivity">
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="M Loundry"
-        android:textSize="10dp"
+        android:layout_height="50dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColor="#18A6F8"
+        android:textColor="#000000"
+        android:text="Magic LounDry"
+        android:fontFamily="@font/reko"
+        android:textSize="30dp"
+        android:gravity="center"
         />
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -21,12 +23,12 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="#FFFFFF">
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewpager"
             app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:layout_width="match_parent"
         android:layout_height="220dp"/>
@@ -41,6 +43,13 @@
         android:numColumns="3"
         android:padding="10dp"/>
 
+        <LinearLayout
+            android:id="@+id/gridview_division"
+            android:background="@color/colorDivision"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/gridview"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"></LinearLayout>
 
         <androidx.viewpager.widget.ViewPager
             android:layout_width="match_parent"
@@ -48,16 +57,22 @@
             android:id="@+id/list_viewpager"
             android:layout_margin="25dp"
             app:layout_constraintTop_toBottomOf="@id/gridview"
-            android:background="@drawable/ic_logo"
+            android:background="#FFFFFF"
             android:paddingBottom="50dp"
             />
-
+        <LinearLayout
+            android:id="@+id/map_division"
+            android:background="@color/colorDivision"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/list_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"></LinearLayout>
         <fragment
             android:layout_margin="25dp"
             android:name="com.example.magiclaundry.Map.MapFragment"
             android:id="@+id/map_content"
             android:layout_width="match_parent"
-            android:layout_height="600dp"
+            android:layout_height="350dp"
             app:layout_constraintTop_toBottomOf="@id/list_viewpager"
             >
 
