--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -5,17 +5,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/map_title"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="주변의 세탁소 정보입니다."/>
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:textColor="#000000"
+        android:text="현재 위치 주변의 세탁소"
+        android:fontFamily="@font/reko"
+        android:textSize="30dp"
+        android:gravity="center"
+        />
+    <LinearLayout
+        app:layout_constraintTop_toBottomOf="@id/map_title"
+        android:layout_marginTop="10dp"
+        android:id="@+id/division_1"
+        android:background="@color/colorDivision"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"/>
 
     <fragment
-
     xmlns:android="http://schemas.android.com/apk/res/android"
+        app:layout_constraintTop_toBottomOf="@id/division_1"
     android:layout_margin="30dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="600dp"
     android:id="@+id/map"
     android:name="com.google.android.gms.maps.SupportMapFragment"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
