--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -37,18 +37,32 @@
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Button android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:id="@+id/logout_button"
-        android:text="로그아웃"
-        app:layout_constraintTop_toBottomOf="@+id/profile_area"/>
 
     <Button
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_width="match_parent"
-        android:id="@+id/profile_photo_edit"
-        android:text="프로필 사진 저장"
-        app:layout_constraintTop_toBottomOf="@+id/logout_button"/>
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:id="@+id/logout_button"
+        app:layout_constraintTop_toBottomOf="@+id/profile_area"
+        android:background="#92CFBF"
+        android:textSize="15dp"
+        android:textColor="#ffffff"
+        android:text="로그아웃"/>
+
+    <Button
+        android:layout_height="60dp"
+        android:layout_width="match_parent"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:id="@+id/goto_favorite_button"
+        app:layout_constraintTop_toBottomOf="@+id/logout_button"
+        android:background="#92CFBF"
+        android:textSize="15dp"
+        android:textColor="#ffffff"
+        android:text="찜 목록"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
